# DonaShaibu

ATLAS/: api_cache.sqlite  docker-compose.yaml  package-lock.json  package.json  pyproject.toml
Anime page/: index.html
Anime page/css/: style.css
My Portfolio/: index.html  script.js
My Portfolio/css/: style.css
YOUTUBE/: index.html
YOUTUBE/css/: style.css
movie/: index.html  script.js
movie/css/: style.css
smart SEQ/: index.html
smart SEQ/css/: style.css
