[tool.poetry]
name = "atlas-multichain"
version = "0.1.0"
description = ""
authors = ["Fidèle Dossou <63989807+Fifiboss98@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
schedule = "^1.2.2"
pandas = "^2.2.3"
sqlalchemy = "^2.0.41"
sqlmodel = "^0.0.24"
psycopg = {extras = ["binary", "pool"], version = "^3.2.9"}
psycopg2 = "^2.9.10"
requests-cache = "^1.2.1"
fastapi = {extras = ["standard"], version = "^0.115.12"}
starlette-admin = "^0.14.1"
itsdangerous = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
